--- a/css/main.css
+++ b/css/main.css
@@ -71,26 +71,39 @@ a:hover {
 
 /*ESCRIBE TU CÓDIGO DESDE AQUÍ*/
 * {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif; /*Tipografía obtenida de Google Fonts*/
+  box-sizing: border-box;
 }
 
 header {
   background: #fff;
-  outline: 1px solid blue;
-  height: 100px;
+  /*outline: 1px solid blue;*/ /*Utilizo outline para visualizar mejor mi estructura y ver como armarla*/
+  height: 99px;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+}
+
+header div img {
+  position: absolute;
+  bottom: 7px;
+  right: 215px;
+  height: 80px;
+  width: 80px;
 }
 
 header div a {
-  font-weight: bold;
-  outline: 1px solid orange;
-  margin: 30px;
+  font-weight: 700;
+  /*outline: 1px solid orange;*/
+  margin: 28px;
   position: relative;
-  top: 35px;
-  left: 130px;
+  top: 36px;
+  left: 220px;
 }
 
-.first_section div{
+.first_section {
   position: relative;
+  top: 78px;
 }
 
 .first_section img {
@@ -100,20 +113,36 @@ header div a {
 
 .first_section h2 {
   position: absolute;
-  bottom: 490px;
-  right: 490px;
+  bottom: 580px;
+  left: 730px;
+  font-weight: 700;
+  font-size: 25px;
+  color: #fff;
 }
 
 .first_section h1 {
+  font-size: 62px;/*56*/
   position: absolute;
-  bottom: 340px;
-  right: 300px;
-  font-size: 48px;
+  bottom: 375px;
+  left: 530px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.first_section p {
+  position: absolute;
+  bottom: 368px;
+  left: 660px;
+  color: #fff;
+  font-size: 18px;
 }
 
 .first_section div a {
-  background-color: #33FF8D;
+  background-color: #01df74;
   color: #fff;
-  padding: 13px;
+  padding: 18px;
   text-align: center;
+  position: absolute;
+  bottom: 200px;
+  left: 906px;
 }
