--- a/css/main.css
+++ b/css/main.css
@@ -70,10 +70,13 @@ a:hover {
 }
 
 /*ESCRIBE TU CÓDIGO DESDE AQUÍ*/
+
+/*Selector universal: Esta regla CSS afectará a todos los elementos*/
 * {
   font-family: 'Raleway', sans-serif; /*Tipografía obtenida de Google Fonts*/
   box-sizing: border-box;
 }
+/*Aplicando estilos CSS al encabezado*/
 
 header {
   background: #fff;
@@ -100,6 +103,8 @@ header div a {
   top: 36px;
   left: 220px;
 }
+
+/*Aplicando estilos CSS a la primera sección*/
 
 .first_section {
   position: relative;
@@ -138,11 +143,74 @@ header div a {
 }
 
 .first_section div a {
-  background-color: #01df74;
+  background-color: #12D574; /*#12D574,#01df74*/
   color: #fff;
   padding: 18px;
   text-align: center;
   position: absolute;
   bottom: 200px;
   left: 906px;
+}
+
+/*Aplicando estilos CSS a la segunda sección*/
+
+.second_section {
+  background-color: #FA8072;
+  color: #fff;
+  height: 800px;
+  width: 100%;
+  top: 450px;
+  font-weight: 700;
+}
+
+.second_section img {
+  height: 180px;
+}
+.second_section h2, .second_section h4 {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+
+.second_section div h2 {
+  font-size: 32px;
+  position: relative;
+  top: 130px;
+}
+
+.second_section div h4 {
+  position: relative;
+  top: 140px;
+}
+
+#first_div {
+  position: relative;
+  top: 200px;
+  right: 360px;
+  text-align: center;
+}
+
+#second_div {
+  position: relative;
+  bottom: 104px;
+  text-align: center;
+}
+
+#third_div {
+  position: relative;
+  bottom: 405px;
+  left: 360px;
+  text-align: center;
+}
+
+#first_div h5, #first_div h6 {
+  line-height: 0;
+}
+
+#second_div h5, #second_div h6 {
+  line-height: 0;
+}
+
+#third_div h5, #third_div h6 {
+  line-height: 0;
 }
